src/vs/editor/contrib/parameterHints/browser/parameterHints.css
/*---------------------------------------------------------------------------------------------
 *  Copyright (c) Microsoft Corporation. All rights reserved.
 *  Licensed under the MIT License. See License.txt in the project root for license information.
 *--------------------------------------------------------------------------------------------*/

.monaco-editor .parameter-hints-widget {
	z-index: 10;
	background-color: #F3F3F3;
	border: 1px solid rgb(200, 200, 200);
	display: flex;
	flex-direction: column;
	line-height: 1.5em;
}

.monaco-editor .parameter-hints-widget > .wrapper {
	max-width: 440px;
	height: 100%;
	display: flex;
	flex-direction: column;
}

.monaco-editor .parameter-hints-widget.multiple {
	min-height: 3.3em;
	padding: 0 0 0 1.9em;
}

.monaco-editor .parameter-hints-widget.visible {
	-webkit-transition: left .05s ease-in-out;
	-moz-transition: left .05s ease-in-out;
	-o-transition: left .05s ease-in-out;
	transition: left .05s ease-in-out;
}

.monaco-editor .parameter-hints-widget p,
.monaco-editor .parameter-hints-widget ul {
	margin: 8px 0;
}

.monaco-editor .parameter-hints-widget .monaco-scrollable-element,
.monaco-editor .parameter-hints-widget .body {
	display: flex;
	flex-direction: column;
}

.monaco-editor .parameter-hints-widget.multiple .body {
	height: 100%;
	border-left: 1px solid rgba(204, 204, 204, 0.5);
}

.monaco-editor .parameter-hints-widget .signature {
	padding: 4px 5px;
}

.monaco-editor .parameter-hints-widget .signature.has-docs {
	border-bottom: 1px solid rgba(204, 204, 204, 0.5);
}

.monaco-editor .parameter-hints-widget .docs {
	height: 100%;
	padding: 0 10px 0 5px;
}

.monaco-editor .parameter-hints-widget .buttons {
	position: absolute;
	display: none;
	bottom: 0;
	left: 0;
}

.monaco-editor .parameter-hints-widget.multiple .buttons {
	display: block;
}

.monaco-editor .parameter-hints-widget.multiple .button {
	position: absolute;
	left: 2px;
	width: 16px;
	height: 16px;
	background-repeat: no-repeat;
	cursor: pointer;
}

.monaco-editor .parameter-hints-widget .button.previous {
	bottom: 24px;
	background-image: url('arrow-up.svg');
}

.monaco-editor .parameter-hints-widget .button.next {
	bottom: 0;
	background-image: url('arrow-down.svg');
}

.monaco-editor .parameter-hints-widget .overloads {
	position: absolute;
	display: none;
	text-align: center;
	bottom: 14px;
	left: 0;
	width: 22px;
	height: 12px;
	line-height: 12px;
	opacity: 0.5;
}

.monaco-editor .parameter-hints-widget.multiple .overloads {
	display: block;
}

.monaco-editor .parameter-hints-widget .signature .parameter {
	display: inline-block;
}

.monaco-editor .parameter-hints-widget .signature .parameter.active {
	font-weight: bold;
	text-decoration: underline;
}

.monaco-editor .parameter-hints-widget .documentation-parameter > .parameter {
	font-weight: bold;
	margin-right: 0.5em;
}

/*** VS Dark */

.monaco-editor.vs-dark .parameter-hints-widget {
	background-color: #2D2D30;
	border-color: rgba(85,85,85,0.5);
}

.monaco-editor.hc-black .parameter-hints-widget .body,
.monaco-editor.vs-dark .parameter-hints-widget .body,
.monaco-editor.hc-black .parameter-hints-widget .signature,
.monaco-editor.vs-dark .parameter-hints-widget .signature {
	border-color: rgba(85,85,85,0.5);
}

.monaco-editor.hc-black .parameter-hints-widget .button.previous,
.monaco-editor.vs-dark .parameter-hints-widget .button.previous {
	background-image: url('arrow-up-dark.svg');
}

.monaco-editor.hc-black .parameter-hints-widget .button.next,
.monaco-editor.vs-dark .parameter-hints-widget .button.next {
	background-image: url('arrow-down-dark.svg');
}

/*** High Contrast */

.monaco-editor.hc-black .parameter-hints-widget {
	background-color: #0C141F;
	border: 2px solid #6FC3DF;
}

